Fixed card bottom layout issue. Updated manifest to use card as home

--- a/src/styles/business-card.scss
+++ b/src/styles/business-card.scss
@@ -1,6 +1,7 @@
 .business-section {
     width: 90vw;
     margin-top: 2vh;
+    margin-bottom: 2vh;
     display: flex;
     justify-content: space-between;
 
